notificationService/src/main/java/com/example/notificationService/exception/commonException/error/ErrorCode.java
package com.example.notificationService.exception.commonException.error;

import org.springframework.http.HttpStatus;

public interface ErrorCode {

    HttpStatus getHttpStatus();
    String getMessage();
}
